# ai-text-detector

./: .dockerignore  .gitattributes  .gitignore  LICENSE  Makefile  README.md  app_streamlit.py  mlflow.db-journal  pyproject.toml
.github/workflows/: ci.yml
configs/: data.yaml  model_classic.yaml  model_transformer.yaml
data/: manifest.json
docker/: Dockerfile.serve
docs/: decisions.md
monitoring/: drift_report.py  simulate_traffic.py
notebooks/: 01_eda.ipynb
src/data/: download.py  prepare.py
src/features/: stylometric.py  vectorizers.py
src/models/: evaluate.py  export_best.py  make_dummy_model.py  train_classic.py  train_transformer.py
src/serving/: app.py  prediction_log.py  schemas.py
src/utils/: config.py  log.py  tracking.py
tests/: test_api.py  test_config.py  test_download.py  test_evaluate.py  test_features.py  test_prepare.py  test_transformer_config.py
