[project]
name = "ai-text-detector"
version = "0.1.0"
description = "Detección de ensayos generados por LLM: enfoque clásico vs transformers, con stack MLOps 100% local"
readme = "README.md"
authors = [{ name = "Alejandro Quispe", email = "oswaldoaqm@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.5",
    "lightgbm>=4.5",
    "mlflow>=2.16",
    "pyyaml>=6.0",
    "kaggle>=1.6",
    "joblib>=1.4",
]

[project.optional-dependencies]
serve = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
]
transformer = [
    "torch>=2.4",
    "transformers>=4.44",
    "datasets>=2.20",
    "accelerate>=0.33",
]
monitor = [
    "evidently>=0.4.33",
    "streamlit>=1.38",
]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "ipykernel>=6.29",
    "matplotlib>=3.9",
    "seaborn>=0.13",
]

# torch con CUDA 12.4 desde el índice oficial de PyTorch (solo en Linux/WSL2)
[tool.uv.sources]
torch = [{ index = "pytorch-cu124", marker = "sys_platform == 'linux'" }]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
